--- a/WebSite/HelpEntries/API.html
+++ b/WebSite/HelpEntries/API.html
@@ -8,9 +8,9 @@
   <p>
     此章节提供 Jumony API 的参考信息。
   </p>
-  <section class="summary" datacontext="{binding key=Childs}">
-    <h3><a action="Entry" _path="{binding path=VirtualPath}"><binding path="Title"></binding></a></h3>
-    <p><binding path="Summary"></binding></p>
+  <section class="summary" datacontext="{eval key=Childs}">
+    <h3><a action="Entry" _path="{eval path=VirtualPath}"><eval path="Title"></eval></a></h3>
+    <p><eval path="Summary"></eval></p>
   </section>
 </body>
 </html>
